@@ -1,3 +1,12 @@
+2004-03-16 [alfons]	0.10
+
+	lend hoa a hand and fix Folder interface breakage
+
+	* src/plugin.c
+		bump up required claws version
+	* src/mailmbox_folder.c
+		re-order mailmbox folder vtable
+
 2004-03-15 [alfons]	0.9
 
 	* src/mailmbox_folder.c
